examples/test/testpolicy14191.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14191
  namespace: namespace277
spec:
  podSelector:
    matchLabels:
      key34: value1
      key10: value13
      key29: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value17
          key11: value3
          key20: value17
      podSelector:
        matchLabels:
          key46: value12
          key11: value15
